Fixed alignement issues with review delete popup

--- a/client/src/components/review.css
+++ b/client/src/components/review.css
@@ -752,6 +752,7 @@ span.li {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    margin-top: 2.6rem;
 }
 
 .delete-review-close {
